cmake_minimum_required(VERSION 2.8)
project(notebook)
add_subdirectory(cpp)
add_subdirectory(cave-of-gold)
add_subdirectory(unconnected-comps)
add_subdirectory(rev-linked-list)
add_subdirectory(lru-cache)
add_subdirectory(rem-dup-string)
add_subdirectory(rem-whitespace-string)
add_subdirectory(median-tracking)
add_subdirectory(cracking-the-coding-interview)

