cmake_minimum_required(VERSION 2.8)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
project(notebook)
add_subdirectory(cpp)
add_subdirectory(cave-of-gold)
add_subdirectory(look-and-say)
add_subdirectory(dutch-flag)
#add_subdirectory(unconnected-comps)
#add_subdirectory(rev-linked-list)
add_subdirectory(lru-cache)
add_subdirectory(rem-dup-string)
add_subdirectory(rem-whitespace-string)
add_subdirectory(median-tracking)
add_subdirectory(spiral-ordering)
add_subdirectory(cracking-the-coding-interview)
add_subdirectory(edit-distance)
add_subdirectory(step-combo)
add_subdirectory(count-bits)
add_subdirectory(count-strings)
add_subdirectory(powfunction)

