cmake_minimum_required(VERSION 2.8)
project(cpp_notebook)
set(CMAKE_CXX_FLAGS "-std=c++11")
add_executable(countdays countdays/CountDays.cpp)
add_executable(address_of_array address_of_array/address_of_array.cpp)
add_executable(boost_datetime_test boost_datetime_test/boost_datetime_test.cpp)
add_executable(basic_excp_safety_violated basic_excp_safety_violated/basic_excp_safety_violated.cpp)
add_executable(boost_format_test boost_format_test/boost_format_test.cpp)
add_executable(silly_recursive_ptr silly_recursive_ptr/silly_recursive_ptr.cpp)
add_executable(mergesort mergesort/mergesort.cpp)
add_executable(lpf project-euler/3/lpf.cpp)
add_executable(lpp project-euler/4/lpp.cpp)
add_executable(max-sliding-window max_sliding_window/max-sliding-window.cpp)
add_executable(list-unique list-unique/list-unique.cpp)
add_executable(lambda lambda/lambda.cpp)
